--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Adresse email:</strong> <span>florian.margage@hotmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Téléphone:</strong> <span>06 59 98 14 80</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Ville:</strong> <span>Arras</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>CV:</strong><a href="assets/pdf/cv.pdf">mon CV</a></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>CV:</strong><a href="pdf/cv.pdf">mon CV</a></li>
                 </ul>
               </div>
             </div>
