--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Voici ci-dessous les différents projets que j'ai pu réalisé jusqu'à aujourd'hui.</p>  
+          <p>Voici ci-dessous les différents projets que j'ai pu réaliser jusqu'à aujourd'hui.</p>  
         </div>
 
         <div class="row" data-aos="fade-up">
